--- a/css/styles.css
+++ b/css/styles.css
@@ -5807,17 +5807,44 @@ body {
   height: 100%;
   background-position: right; }
 
-.container {
+.navigationheader {
+  display: flex;
+  justify-content: flex-end; }
+  .navigationheader p {
+    padding-top: 33px;
+    padding-right: 50px;
+    color: #FFFFFF;
+    text-transform: uppercase; }
+  .navigationheader p::after {
+    content: ''; }
+
+.maincontainer {
   width: 70%; }
 
+.navbuttonstop {
+  font-size: 60px; }
+
+#facebook {
+  color: #495C91; }
+
+#rss {
+  color: #BC914E; }
+
+#twitter {
+  color: #758FC1; }
+
+#youtube {
+  color: #994A3D; }
+
 .headbutton {
-  background-color: #A15250;
+  background-color: #CC0000;
   display: block;
   text-align: center;
   color: #FFFFFF;
   font-size: 16px;
   padding: 10px;
-  position: relative; }
+  position: relative;
+  box-shadow: 0px 3px 0px #919091; }
   .headbutton::before, .headbutton::after {
     content: '';
     display: block;
@@ -5839,7 +5866,8 @@ body {
   background-size: cover;
   background-position: 0px -90px;
   height: 200px;
-  border: 5px solid #FFFFFF; }
+  border: 5px solid #FFFFFF;
+  box-shadow: 0px 3px 0px #919091; }
 
 .logo-banner {
   background-image: url("../skateboard-images/peralta-logo.png");
@@ -5855,7 +5883,8 @@ body {
 .pg-1 {
   background-color: #FFFFFF;
   height: 270px;
-  padding: 15px; }
+  padding: 15px;
+  box-shadow: 0px 3px 0px #919091; }
   .pg-1 h1 {
     font-size: 20px; }
   .pg-1 p {
@@ -5863,7 +5892,7 @@ body {
   .pg-1 h2 {
     font-size: 10px;
     text-align: center;
-    color: #A15250; }
+    color: #CC0000; }
 
 .sk8er-row {
   margin-top: 10px; }
@@ -5874,14 +5903,16 @@ body {
   font-size: 40px;
   font-weight: bold;
   vertical-align: middle;
-  padding-top: 40px; }
+  padding-top: 40px;
+  box-shadow: 0px 3px 0px #919091; }
 
 .skater1 {
   background-image: url("../skateboard-images/sk8er-4.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 200px;
-  border: 5px solid #FFFFFF; }
+  border: 5px solid #FFFFFF;
+  background-position: -50px 0; }
 
 .skater2 {
   background-image: url("../skateboard-images/sk8er-3.png");
@@ -5911,7 +5942,8 @@ body {
 .tenboards {
   background-color: #FFFFFF;
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  box-shadow: 0px 3px 0px #919091; }
   .tenboards img {
     padding: 10px; }
 
@@ -5919,7 +5951,8 @@ body {
   background-color: #FFFFFF;
   display: flex;
   margin-top: 10px;
-  margin-bottom: 50px; }
+  margin-bottom: 50px;
+  box-shadow: 0px 3px 0px #919091; }
 
 .bottomtext {
   padding-left: 30px;
@@ -5934,6 +5967,11 @@ body {
   border-radius: 0; }
 
 #buttonbottom {
-  background-color: #A15250; }
+  background-color: #CC0000;
+  float: right;
+  width: 40%;
+  border-radius: 0;
+  color: #FFFFFF;
+  text-transform: uppercase; }
 
 /*# sourceMappingURL=styles.css.map */
