--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,8 +5,12 @@ $grid-gutter-width: 10px;
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
 
 //Colors
-$headbutton_color: #A15250;
+$headbutton_color: #CC0000;
 $white: #FFFFFF;
+$facebook_color: #495C91;
+$rss_color: #BC914E;
+$twitter_color: #758FC1;
+$youtube_color: #994A3D;
 
 body{
   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../skateboard-images/bg.jpg");
@@ -18,10 +22,48 @@ body{
 
 }
 
-.container{
+.navigationheader{
+  display: flex;
+  justify-content: flex-end;
+
+
+  p{
+    padding-top: 33px;
+    padding-right: 50px;
+    color: $white;
+    text-transform: uppercase;
+
+  }
+
+  p::after{
+    content: '';
+  }
+}
+
+.maincontainer{
   width: 70%;
 }
 
+.navbuttonstop{
+  font-size: 60px;
+
+}
+
+#facebook{
+  color: $facebook_color;
+}
+
+#rss{
+  color: $rss_color;
+}
+
+#twitter{
+  color: $twitter_color;
+}
+
+#youtube{
+  color: $youtube_color;
+}
 
 
 .headbutton{
@@ -32,6 +74,7 @@ body{
   font-size: 16px;
   padding: 10px;
   position: relative;  //absolute the children
+  box-shadow: 0px 3px 0px #919091;
 
   &::before, &::after{
     content: '';
@@ -59,6 +102,7 @@ body{
   background-position: 0px -90px;
   height: 200px;
   border: 5px solid $white;
+  box-shadow: 0px 3px 0px #919091;
   // position: relative;   //For children
 
   // &::before{
@@ -91,6 +135,7 @@ body{
   background-color: $white;
   height: 270px;
   padding: 15px;
+  box-shadow: 0px 3px 0px #919091;
   h1{
   font-size: 20px;
   }
@@ -115,6 +160,7 @@ body{
   font-weight: bold;
   vertical-align: middle;
   padding-top: 40px;
+  box-shadow: 0px 3px 0px #919091;
 }
 
 .skater1{
@@ -123,6 +169,7 @@ body{
   background-size: cover;
   height: 200px;
   border: 5px solid $white;
+  background-position: -50px 0;
 
 }
 
@@ -132,6 +179,7 @@ body{
   background-size: cover;
   height: 200px;
   border: 5px solid $white;
+
 
 }
 
@@ -163,6 +211,7 @@ body{
   background-color: $white;
   display: flex;
   justify-content: space-between;
+  box-shadow: 0px 3px 0px #919091;
 
   img{
     padding: 10px;
@@ -176,6 +225,7 @@ body{
   display: flex;
   margin-top: 10px;
   margin-bottom: 50px;
+  box-shadow: 0px 3px 0px #919091;
 
 }
 
@@ -196,5 +246,10 @@ body{
 
 #buttonbottom{
   background-color: $headbutton_color;
+  float: right;
+  width: 40%;
+  border-radius: 0;
+  color: $white;
+  text-transform: uppercase;
 
 }
