--- a/css/styles.css
+++ b/css/styles.css
@@ -5816,7 +5816,8 @@ body {
     color: #FFFFFF;
     text-transform: uppercase; }
   .navigationheader p::after {
-    content: ''; }
+    content: '\2219';
+    margin-left: 15px; }
 
 .maincontainer {
   width: 70%; }
@@ -5927,7 +5928,7 @@ body {
   background-size: cover;
   height: 400px;
   border: 5px solid #FFFFFF;
-  background-position: -330px 0px;
+  background-position: -320px 0px;
   padding-top: 140px; }
 
 .skater4 {
@@ -5936,7 +5937,6 @@ body {
   background-size: cover;
   height: 190px;
   border: 5px solid #FFFFFF;
-  background-position: 0px -80px;
   padding-top: 60px; }
 
 .tenboards {
@@ -5944,8 +5944,6 @@ body {
   display: flex;
   justify-content: space-between;
   box-shadow: 0px 3px 0px #919091; }
-  .tenboards img {
-    padding: 10px; }
 
 .bottomsection {
   background-color: #FFFFFF;
