--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -36,7 +36,8 @@ body{
   }
 
   p::after{
-    content: '';
+    content: '\2219';
+    margin-left: 15px;
   }
 }
 
@@ -189,7 +190,7 @@ body{
   background-size: cover;
   height: 400px;
   border: 5px solid $white;
-  background-position: -330px 0px;
+  background-position: -320px 0px;
   padding-top: 140px;
 
 }
@@ -200,7 +201,7 @@ body{
   background-size: cover;
   height: 190px;
   border: 5px solid $white;
-  background-position: 0px -80px;
+  // background-position: 0px -80px;
   padding-top: 60px;
 
 }
@@ -214,7 +215,7 @@ body{
   box-shadow: 0px 3px 0px #919091;
 
   img{
-    padding: 10px;
+    // padding: 10px;
 
   }
 
