--- a/css/styles.css
+++ b/css/styles.css
@@ -5799,6 +5799,9 @@ button.close {
 @media print {
   .hidden-print {
     display: none !important; } }
+* {
+  box-sizing: border-box; }
+
 body {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../skateboard-images/bg.jpg");
   background-size: 100%;
@@ -5883,7 +5886,7 @@ body {
 
 .pg-1 {
   background-color: #FFFFFF;
-  height: 270px;
+  height: 300px;
   padding: 15px;
   box-shadow: 0px 3px 0px #919091; }
   .pg-1 h1 {
@@ -5937,6 +5940,7 @@ body {
   background-size: cover;
   height: 190px;
   border: 5px solid #FFFFFF;
+  background-position: 0px -50px;
   padding-top: 60px; }
 
 .tenboards {
@@ -5949,27 +5953,90 @@ body {
   background-color: #FFFFFF;
   display: flex;
   margin-top: 10px;
-  margin-bottom: 50px;
-  box-shadow: 0px 3px 0px #919091; }
+  margin-bottom: 30px;
+  box-shadow: 0px 3px 0px #919091;
+  height: 330px; }
 
 .bottomtext {
-  padding-left: 30px;
-  width: 40%; }
+  padding: 30px; }
 
 .bigform {
-  padding: 10px;
-  margin-top: 15px;
-  width: 65%; }
+  background-color: #FFFFFF;
+  margin-top: 10px;
+  height: 330px;
+  padding: 30px;
+  margin-bottom: 30px; }
 
 .form-group input {
   border-radius: 0; }
 
-#buttonbottom {
+#button_one {
   background-color: #CC0000;
   float: right;
   width: 40%;
   border-radius: 0;
   color: #FFFFFF;
   text-transform: uppercase; }
+
+@media (max-width: 992px) {
+  .navbuttonstop {
+    font-size: 50px; }
+
+  .navigationheader p {
+    padding-top: 28px; }
+
+  .headbutton {
+    margin-bottom: 10px; }
+
+  .banner1 {
+    background-position: 0 0; }
+
+  .pg-1 {
+    margin: 0;
+    padding: 20px;
+    height: auto; }
+    .pg-1 h1 {
+      text-align: center; }
+    .pg-1 p {
+      font-size: 16px; }
+    .pg-1 h2 {
+      font-size: 14px; }
+
+  .tenboards img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; }
+
+  .bottomsection {
+    height: auto; }
+
+  .skater1 {
+    background-position: 0 -30px;
+    padding-top: 65px;
+    text-align: left;
+    padding-left: 20px; }
+
+  .skater2 {
+    background-position: 0px -70px;
+    padding-top: 65px;
+    text-align: right;
+    padding-right: 20px; }
+
+  .skater3 {
+    background-position: 0 -40px;
+    height: 200px;
+    padding-top: 65px;
+    text-align: left;
+    padding-left: 20px; }
+
+  .skater4 {
+    background-position: 0 -70px;
+    height: 200px;
+    padding-top: 65px;
+    text-align: right;
+    padding-right: 20px; }
+
+  .bottomtext h3 {
+    font-size: 36px; } }
 
 /*# sourceMappingURL=styles.css.map */
