--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -54,18 +54,38 @@ body{
 
 #facebook{
   color: $facebook_color;
+  text-decoration: none;
+
+  &:hover{
+    color: lighten($facebook_color, 20%);
+  }
 }
 
 #rss{
   color: $rss_color;
+  text-decoration: none;
+
+  &:hover{
+    color: lighten($rss_color, 20%);
+  }
 }
 
 #twitter{
   color: $twitter_color;
+  text-decoration: none;
+
+  &:hover{
+    color: lighten($twitter_color, 20%);
+  }
 }
 
 #youtube{
   color: $youtube_color;
+  text-decoration: none;
+
+  &:hover{
+    color: lighten($youtube_color, 20%);
+  }
 }
 
 
@@ -90,6 +110,12 @@ body{
 
   &::before{left: 10px}
   &::after{right: 10px;}
+
+  &:hover{
+    text-decoration: none;
+    font-weight: bolder;
+    color: $twitter_color;
+  }
 }
 
 .banner-photo-row{
@@ -106,18 +132,6 @@ body{
   height: 200px;
   border: 5px solid $white;
   box-shadow: 0px 3px 0px #919091;
-  // position: relative;   //For children
-
-  // &::before{
-  //   content: "";
-  //   display: block;
-  //   position: absolute;
-  //   top: 0;
-  //   bottom: 0;
-  //   left: 0;
-  //   right: 0;
-  //   background: rgba(0, 0, 0, 0.5), url("../skateboard-images/grid.png");
-  // }
 }
 
 .logo-banner{
@@ -215,38 +229,30 @@ body{
   display: flex;
   justify-content: space-between;
   box-shadow: 0px 3px 0px #919091;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 
 
-.bottomsection{
+#bottomsection{
   background-color: $white;
   display: flex;
   margin-top: 10px;
   margin-bottom: 30px;
   box-shadow: 0px 3px 0px #919091;
-  height: 330px;
+  height: auto;
 
 }
-// WHY DOES THIS NOT WORK
-// .specialcol1{
-//   padding-right: 0 !important;
-//
-// }
-//
-// .specialcol2{
-//   padding-right: 0 !important;
-//
-// }
 
 .bottomtext{
   padding: 30px;
 }
 
-.bigform{
+#bigform{
   background-color: $white;
   margin-top: 10px;
-  height: 330px;
+  height: inherit;
   padding: 30px;
   margin-bottom: 30px;
 
@@ -266,6 +272,12 @@ body{
 
 }
 
+.bottom-buttons-nav{
+  a{
+    font-size: 30px;
+    text-decoration: none;
+  }
+}
 
 
 
@@ -351,6 +363,8 @@ body{
   .bottomtext h3{
     font-size: 36px;
   }
+
+
 
 
 }
