--- a/css/styles.css
+++ b/css/styles.css
@@ -5968,20 +5968,19 @@ body {
   padding-right: 5px; }
 
 #bottomsection {
-  background-color: #FFFFFF;
-  margin-top: 10px;
-  margin-bottom: 30px;
-  box-shadow: 0px 3px 0px #919091; }
+  margin-top: 10px; }
 
 .bottomtext {
   padding: 30px; }
 
 #bigform {
-  background-color: #FFFFFF;
   margin-top: 10px;
-  padding: 30px;
-  margin-bottom: 30px;
-  box-shadow: 0px 3px 0px #919091; }
+  padding: 30px; }
+
+.bg-white {
+  background-color: #FFFFFF;
+  box-shadow: 0px 3px 0px #919091;
+  margin: 30px 0; }
 
 .form-group input {
   border-radius: 0; }
