--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -236,10 +236,10 @@ body{
 
 
 #bottomsection{
-  background-color: $white;
+  // background-color: $white;
   margin-top: 10px;
-  margin-bottom: 30px;
-  box-shadow: 0px 3px 0px #919091;
+  // margin-bottom: 30px;
+  // box-shadow: 0px 3px 0px #919091;
   // height: auto;
 
 }
@@ -249,15 +249,21 @@ body{
 }
 
 #bigform{
-  background-color: $white;
+  // background-color: $white;
   margin-top: 10px;
   padding: 30px;
-  margin-bottom: 30px;
-  box-shadow: 0px 3px 0px #919091;
+  // margin-bottom: 30px;
+  // box-shadow: 0px 3px 0px #919091;
 
 
 }
 
+.bg-white{
+  background-color: $white;
+  box-shadow: 0px 3px 0px #919091;
+  margin: 30px 0;
+
+}
 
 .form-group input{
   border-radius: 0;
